feat: adding weather details container

--- a/index.html
+++ b/index.html
@@ -67,6 +67,39 @@
             <p>26°</p>
           </div>
         </div>
+        <div class="weather-details-container">
+          <div class="weather-detail-item">
+            <p>Sensação Térmica</p>
+            <div>
+              <image src="images/temperature.svg" alt="Sensação Térmica" />
+              <p>30°</p>
+            </div>
+          </div>
+
+          <div class="weather-detail-item">
+            <p>Chance de chuva</p>
+            <div>
+              <image src="images/rain.svg" alt="Chance de chuva" />
+              <p>2%</p>
+            </div>
+          </div>
+
+          <div class="weather-detail-item">
+            <p>Vento</p>
+            <div>
+              <image src="images/wind.svg" alt="Vento" />
+              <p>2 <span>km/h</span></p>
+            </div>
+          </div>
+
+          <div class="weather-detail-item">
+            <p>índice UV</p>
+            <div>
+              <image src="images/uv.svg" alt="índice UV" />
+              <p>4</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
