--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="app-container">
       <div class="left-column">
         <nav class="navbar-container">
-          <image src="./images/logo.svg" alt="Clima Hoje"></image>
+          <img src="./images/logo.svg" alt="Clima Hoje"></image>
           <input
             class="custom-input"
             type="text"
@@ -28,42 +28,42 @@
             <p>Chance de chuva 0%</p>
             <h2>28°</h2>
           </div>
-          <image src="./images/sun clouds.svg" alt="Sol com poucas nuvens" />
+          <img src="./images/sun clouds.svg" alt="Sol com poucas nuvens" />
         </div>
         <div class="hourly-forecast-container">
           <div class="hour-weather-item">
             <p>6:00 AM</p>
-            <image src="./images/sun cloud.svg" alt="Sol com poucas nuvens" />
+            <img src="./images/sun cloud.svg" alt="Sol com poucas nuvens" />
             <p>24°</p>
           </div>
 
           <div class="hour-weather-item">
             <p>9:00 AM</p>
-            <image src="./images/sun clouds.svg" alt="Sol com muitas nuvens" />
+            <img src="./images/sun clouds.svg" alt="Sol com muitas nuvens" />
             <p>28°</p>
           </div>
 
           <div class="hour-weather-item">
             <p>12:00 PM</p>
-            <image src="./images/sun.svg" alt="Sol" />
+            <img src="./images/sun.svg" alt="Sol" />
             <p>30°</p>
           </div>
 
           <div class="hour-weather-item">
             <p>3:00 PM</p>
-            <image src="./images/sun.svg" alt="Sol" />
+            <img src="./images/sun.svg" alt="Sol" />
             <p>30°</p>
           </div>
 
           <div class="hour-weather-item">
             <p>6:00 PM</p>
-            <image src="./images/clouds.svg" alt="Nublado" />
+            <img src="./images/clouds.svg" alt="Nublado" />
             <p>27°</p>
           </div>
 
           <div class="hour-weather-item">
             <p>9:00 PM</p>
-            <image src="./images/moon clouds.svg" alt="Noite com nuvens" />
+            <img src="./images/moon clouds.svg" alt="Noite com nuvens" />
             <p>26°</p>
           </div>
         </div>
@@ -71,7 +71,7 @@
           <div class="weather-detail-item">
             <p>Sensação Térmica</p>
             <div>
-              <image src="images/temperature.svg" alt="Sensação Térmica" />
+              <img src="images/temperature.svg" alt="Sensação Térmica" />
               <p>30°</p>
             </div>
           </div>
@@ -79,7 +79,7 @@
           <div class="weather-detail-item">
             <p>Chance de chuva</p>
             <div>
-              <image src="images/rain.svg" alt="Chance de chuva" />
+              <img src="images/rain.svg" alt="Chance de chuva" />
               <p>2%</p>
             </div>
           </div>
@@ -87,7 +87,7 @@
           <div class="weather-detail-item">
             <p>Vento</p>
             <div>
-              <image src="images/wind.svg" alt="Vento" />
+              <img src="images/wind.svg" alt="Vento" />
               <p>2 <span>km/h</span></p>
             </div>
           </div>
@@ -95,8 +95,68 @@
           <div class="weather-detail-item">
             <p>índice UV</p>
             <div>
-              <image src="images/uv.svg" alt="índice UV" />
+              <img src="images/uvnpnpm.svg" alt="índice UV" />
               <p>4</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right-column">
+        <div class="weekly-forecast-container">
+          <div class="day-weather-item">
+            <p>Segunda</p>
+            <img src="./images/sun clouds.svg" alt="Sol com nuvens" />
+            <div>
+              <p>29°</p>
+              <p>23°</p>
+            </div>
+          </div>
+          <div class="day-weather-item">
+            <p>Terça</p>
+            <img src="./images/sun.svg" alt="Sol" />
+            <div>
+              <p>30°</p>
+              <p>25°</p>
+            </div>
+          </div>
+          <div class="day-weather-item">
+            <p>Quarta</p>
+            <img src="./images/rain-2.svg" alt="Chuva" />
+            <div>
+              <p>25°</p>
+              <p>22°</p>
+            </div>
+          </div>
+          <div class="day-weather-item">
+            <p>Quinta</p>
+            <img src="./images/sun cloud.svg" alt="Sol com nuvens" />
+            <div>
+              <p>28°</p>
+              <p>23°</p>
+            </div>
+          </div>
+          <div class="day-weather-item">
+            <p>Sexta</p>
+            <img src="./images/rain-2.svg" alt="Chuva" />
+            <div>
+              <p>25°</p>
+              <p>23°</p>
+            </div>
+          </div>
+          <div class="day-weather-item">
+            <p>Sábado</p>
+            <img src="./images/sun clouds.svg" alt="Sol com nuvens" />
+            <div>
+              <p>30°</p>
+              <p>25°</p>
+            </div>
+          </div>
+          <div class="day-weather-item">
+            <p>Domingo</p>
+            <img src="./images/sun.svg" alt="Sol" />
+            <div>
+              <p>30°</p>
+              <p>25°</p>
             </div>
           </div>
         </div>
