--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device.width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="./mobile.css"/>
   </head>
   <body>
     <div class="app-container">
@@ -57,7 +59,7 @@
 
           <div class="hour-weather-item">
             <p>6:00 PM</p>
-            <img src="./images/clouds.svg" alt="Nublado" />
+            <img src="./images/sun cloud.svg" alt="Nublado" />
             <p>27°</p>
           </div>
 
@@ -95,7 +97,7 @@
           <div class="weather-detail-item">
             <p>índice UV</p>
             <div>
-              <img src="images/uvnpnpm.svg" alt="índice UV" />
+              <img src="images/uv.svg" alt="índice UV" />
               <p>4</p>
             </div>
           </div>
